--- a/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
@@ -1,11 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uzivatelNeprihlaseny.FXMLNeprihlasenyUzivatelController">
-    
-</AnchorPane>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uzivatelNeprihlaseny.FXMLNeprihlasenyUzivatelController">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="22.0" prefWidth="600.0">
+               <children>
+                  <Label text="Info" />
+               </children>
+            </HBox>
+            <HBox prefHeight="25.0" prefWidth="600.0">
+               <children>
+                  <Label text="máteli jakýkoliv dotaz, zanechte nám prosím zprávu:" />
+               </children>
+            </HBox>
+            <TextArea fx:id="tAreaZprava" prefHeight="90.0" prefWidth="600.0" />
+            <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="580.0">
+               <children>
+                  <Button fx:id="btnOdeslat" mnemonicParsing="false" onAction="#handleBtnOdeslatOnAction" text="odeslat" />
+               </children>
+            </HBox>
+            <HBox prefHeight="19.0" prefWidth="580.0">
+               <children>
+                  <Label text="naši doktoři:" />
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ListView fx:id="listViewDoktori" prefHeight="100.0" prefWidth="377.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+               <children>
+                  <Label text="pokud máte zájem využívat služby naší kliniky, prosím zaregistrujte se." />
+                  <Button fx:id="btnZpet" mnemonicParsing="false" onAction="#handleBtnZpetOnAction" text="zpět na přihlášení" />
+               </children>
+            </HBox>
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+      </VBox>
+   </center>
+</BorderPane>
