--- a/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,7 +12,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="registrace.FXMLRegistraceController">
    <center>
@@ -40,6 +40,8 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <TextField fx:id="tfJmeno" GridPane.columnIndex="1" />
@@ -58,6 +60,10 @@
                   <Label prefHeight="17.0" prefWidth="443.0" text="e-mail:" GridPane.rowIndex="7" />
                   <TextField fx:id="tfTelefon" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <TextField fx:id="tfEmail" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <Label text="přihlašovací jméno: " GridPane.rowIndex="8" />
+                  <Label text="heslo: " GridPane.rowIndex="9" />
+                  <PasswordField fx:id="tfHeslo" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                  <TextField fx:id="tfPrihlasovaciJmeno" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                </children>
                <VBox.margin>
                   <Insets left="30.0" right="30.0" />
