--- a/semestralka/VeterinarniKlinika_IDAS/src/veterinarniklinika/FXMLUvodni.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/veterinarniklinika/FXMLUvodni.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -31,14 +33,19 @@
             <HBox alignment="CENTER" prefHeight="55.0" prefWidth="600.0">
                <children>
                   <Label text="heslo: " />
-                  <TextField fx:id="tfHeslo" />
+                  <PasswordField fx:id="tfHeslo" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="56.0" prefWidth="600.0">
+               <children>
+                  <Label text="role: " />
+                  <ComboBox fx:id="cbRole" prefWidth="150.0" promptText="uzivatel/doktor" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <Button fx:id="btnPrihlasit" mnemonicParsing="false" onAction="#btnPrihlasitOnAction" text="prihlásit se" />
                   <Button fx:id="btnRegistrovat" mnemonicParsing="false" onAction="#handleBtnRegistraceOnAction" text="registrovat se" />
-                  <Button fx:id="btnKonec" mnemonicParsing="false" onAction="#handleBtnKonecOnAction" text="konec" />
                </children>
                <VBox.margin>
                   <Insets />
