--- a/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doktor.FXMLDoktorController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doktor.FXMLDoktorController">
    <top>
       <VBox prefHeight="59.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,7 +27,7 @@
                   <TextField fx:id="tfJmenoZvirete" />
                   <Label text="druh:" />
                   <ComboBox fx:id="cbDruh" prefWidth="150.0" />
-                  <Button fx:id="btnVyhledat" mnemonicParsing="false" onAction="#handleBtnVyhledatOnAction" text="vyhledat" />
+                  <RadioButton fx:id="rBtnZapniFiltry" mnemonicParsing="false" text="zapni filtry" />
                </children>
             </HBox>
          </children>
