--- a/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
@@ -34,6 +34,7 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -46,24 +47,26 @@
                <children>
                   <TextField fx:id="tfJmenoR" GridPane.columnIndex="1" />
                   <TextField fx:id="tfPrijmeni" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="tfUlice" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="tfUlice" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label prefHeight="17.0" prefWidth="327.0" text="jméno:" />
-                  <Label prefHeight="17.0" prefWidth="318.0" text="ulice:" GridPane.rowIndex="2" />
-                  <Label prefHeight="17.0" prefWidth="330.0" text="číslo popisné:" GridPane.rowIndex="3" />
-                  <Label prefHeight="17.0" prefWidth="325.0" text="město:" GridPane.rowIndex="4" />
-                  <Label prefHeight="17.0" prefWidth="396.0" text="PSČ:" GridPane.rowIndex="5" />
-                  <TextField fx:id="tfCp" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="tfMesto" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField fx:id="tfPsc" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label prefHeight="17.0" prefWidth="318.0" text="ulice:" GridPane.rowIndex="3" />
+                  <Label prefHeight="17.0" prefWidth="330.0" text="číslo popisné:" GridPane.rowIndex="4" />
+                  <Label prefHeight="17.0" prefWidth="325.0" text="město:" GridPane.rowIndex="5" />
+                  <Label prefHeight="17.0" prefWidth="396.0" text="PSČ:" GridPane.rowIndex="6" />
+                  <TextField fx:id="tfCp" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="tfMesto" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="tfPsc" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <Label prefHeight="17.0" prefWidth="329.0" text="příjmení:" GridPane.rowIndex="1" />
-                  <Label prefHeight="17.0" prefWidth="370.0" text="telefon:" GridPane.rowIndex="6" />
-                  <Label prefHeight="17.0" prefWidth="443.0" text="e-mail:" GridPane.rowIndex="7" />
-                  <TextField fx:id="tfTelefon" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="tfEmail" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <Label text="přihlašovací jméno: " GridPane.rowIndex="8" />
-                  <Label text="heslo: " GridPane.rowIndex="9" />
-                  <PasswordField fx:id="tfHesloR" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                  <TextField fx:id="tfPrihlasovaciJmeno" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                  <Label prefHeight="17.0" prefWidth="370.0" text="telefon:" GridPane.rowIndex="7" />
+                  <Label prefHeight="17.0" prefWidth="443.0" text="e-mail:" GridPane.rowIndex="8" />
+                  <TextField fx:id="tfTelefon" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <TextField fx:id="tfEmail" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                  <Label text="přihlašovací jméno: " GridPane.rowIndex="9" />
+                  <Label text="heslo: " GridPane.rowIndex="10" />
+                  <PasswordField fx:id="tfHesloR" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                  <TextField fx:id="tfPrihlasovaciJmeno" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                  <Label text="datum narozeni (DD-MM-YYYY):" GridPane.rowIndex="2" />
+                  <TextField fx:id="tfDatumNarozeni" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <VBox.margin>
                   <Insets left="30.0" right="30.0" />
@@ -73,7 +76,7 @@
       </VBox>
    </center>
    <bottom>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnZpet" mnemonicParsing="false" onAction="#handleBtnZpetOnAction" text="Zpět na přihlášení" />
             <Button fx:id="btnZaregistrovat" mnemonicParsing="false" onAction="#handleBtnZaregistrovatOnAction" text="Registrovat" />
