--- a/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/registrace/FXMLRegistrace.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -66,7 +67,7 @@
                   <PasswordField fx:id="tfHesloR" GridPane.columnIndex="1" GridPane.rowIndex="10" />
                   <TextField fx:id="tfPrihlasovaciJmeno" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                   <Label text="datum narozeni (DD-MM-YYYY):" GridPane.rowIndex="2" />
-                  <TextField fx:id="tfDatumNarozeni" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <DatePicker fx:id="datePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <VBox.margin>
                   <Insets left="30.0" right="30.0" />
