--- a/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
@@ -5,10 +5,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uzivatelNeprihlaseny.FXMLNeprihlasenyUzivatelController">
    <center>
@@ -16,7 +18,10 @@
          <children>
             <HBox alignment="CENTER" prefHeight="22.0" prefWidth="600.0">
                <children>
-                  <Label text="Info" />
+                  <Label text="Nepřihlášený uživatel">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
                </children>
             </HBox>
             <HBox prefHeight="25.0" prefWidth="600.0">
@@ -38,6 +43,10 @@
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <ListView fx:id="listViewDoktori" prefHeight="100.0" prefWidth="377.0" />
+                  <ImageView fx:id="iwDoktor" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@man.jpg" />
+                     </image></ImageView>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
