--- a/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/uzivatelNeprihlaseny/FXMLNeprihlasenyUzivatel.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,51 +13,48 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uzivatelNeprihlaseny.FXMLNeprihlasenyUzivatelController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="22.0" prefWidth="600.0">
-               <children>
-                  <Label text="Nepřihlášený uživatel">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-               </children>
-            </HBox>
-            <HBox prefHeight="25.0" prefWidth="600.0">
-               <children>
-                  <Label text="máteli jakýkoliv dotaz, zanechte nám prosím zprávu:" />
-               </children>
-            </HBox>
-            <TextArea fx:id="tAreaZprava" prefHeight="90.0" prefWidth="600.0" />
-            <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="580.0">
-               <children>
-                  <Button fx:id="btnOdeslat" mnemonicParsing="false" onAction="#handleBtnOdeslatOnAction" text="odeslat" />
-               </children>
-            </HBox>
-            <HBox prefHeight="19.0" prefWidth="580.0">
-               <children>
-                  <Label text="naši doktoři:" />
-               </children>
-            </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <ListView fx:id="listViewDoktori" prefHeight="100.0" prefWidth="377.0" />
-                  <ImageView fx:id="iwDoktor" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@man.jpg" />
-                     </image></ImageView>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
-               <children>
-                  <Label text="pokud máte zájem využívat služby naší kliniky, prosím zaregistrujte se." />
-                  <Button fx:id="btnZpet" mnemonicParsing="false" onAction="#handleBtnZpetOnAction" text="zpět na přihlášení" />
-               </children>
-            </HBox>
+            <Label text="kontakt na naše doktory:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ListView fx:id="listViewDoktori" onMouseClicked="#handleOnMouseClicked" prefHeight="100.0" prefWidth="438.0" />
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
          </padding>
       </VBox>
    </center>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="57.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="pokud máte zájem využívat služby naší kliniky, prosím zaregistrujte se." />
+            <Button fx:id="btnZpet" mnemonicParsing="false" onAction="#handleBtnZpetOnAction" text="zpět na přihlášení" />
+         </children>
+      </HBox>
+   </bottom>
+   <top>
+      <HBox alignment="CENTER" prefHeight="22.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Nepřihlášený uživatel">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+   </top>
+   <right>
+      <VBox alignment="CENTER" maxWidth="200.0" prefHeight="321.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="iwDoktor" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@man.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </VBox>
+   </right>
 </BorderPane>
