--- a/semestralka/VeterinarniKlinika_IDAS/src/veterinarniklinika/FXMLUvodni.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/veterinarniklinika/FXMLUvodni.fxml
@@ -67,14 +67,14 @@
       </VBox>
    </center>
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="112.0" fitWidth="104.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="64.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@logo.png" />
                </image>
                <VBox.margin>
-                  <Insets right="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </ImageView>
          </children>
@@ -87,6 +87,9 @@
                <image>
                   <Image url="@fretka.png" />
                </image>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" />
+               </VBox.margin>
             </ImageView>
          </children>
       </VBox>
