--- a/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
@@ -244,6 +244,13 @@
                   <TableColumn fx:id="zakroky_operace" prefWidth="150.0" text="operace" />
               </columns>
             </TableView>
+            <TableView fx:id="tableViewZpravy" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn fx:id="zpravy_prijemce" prefWidth="150.0" text="prijemce" />
+                <TableColumn fx:id="zpravy_odesilatel" prefWidth="150.0" text="odesilatel" />
+                  <TableColumn fx:id="zpravy_text" prefWidth="150.0" text="zprava" />
+              </columns>
+            </TableView>
             <TableView fx:id="tableViewZvirata" prefHeight="200.0" prefWidth="200.0">
                <columns>
                   <TableColumn fx:id="zvirata_jmeno" prefWidth="150.0" text="jmeno" />
