--- a/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
+++ b/semestralka/VeterinarniKlinika_IDAS/src/doktor/FXMLDoktor.fxml
@@ -40,6 +40,8 @@
    <bottom>
       <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" prefWidth="600.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
+            <Button fx:id="btnNadrizeni" mnemonicParsing="false" onAction="#btnNadizeniOnAction" text="zobraz mé nadřízené" />
+            <Button fx:id="btnChudaci" mnemonicParsing="false" onAction="#btnChudaciOnAction" text="akce chudaci" />
             <Button fx:id="btnPridejFotku" mnemonicParsing="false" onAction="#btnFotkuOnAction" text="přidej fotku" />
             <Button fx:id="btnVystavitFakturu" mnemonicParsing="false" onAction="#handleBtnVystavitFakturuOnAction" prefWidth="105.0" text="vystavit fakturu" />
             <Button fx:id="btnMojeUdaje" mnemonicParsing="false" onAction="#handleBtnMojeUdajeOnAction" text="moje údaje" />
@@ -58,6 +60,7 @@
             <Button fx:id="btnOdebrat" mnemonicParsing="false" onAction="#button_odebrat" prefWidth="105.0" text="Odebrat zaznam" />
             <Button fx:id="btnUloz" mnemonicParsing="false" onAction="#button_ulozit" prefWidth="105.0" text="Ulozit zaznam" />
             <Button fx:id="btnNapsatZpravu" mnemonicParsing="false" onAction="#hadnleBtnNapsatZpravu" prefWidth="105.0" text="Napsat zpravu" />
+            <Button fx:id="btnNajdiPodobna" mnemonicParsing="false" onAction="#btnNajdiPodobnaOnAction" prefWidth="105.0" text="Najdi podobná" />
          </children>
       </VBox>
    </right>
